Src/Resources/KtaneWeb.css
/* ... */
    #top-controls #search-switcher {
        display: inline-block;
        width: .4cm;
        height: .4cm;
        margin-right: .1cm;
        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10"><path d="M1 1 9 5 1 9z" /></svg>');
        background-repeat: no-repeat;
    }

    #top-controls .search-container {
        display: none;
    }

        #top-controls .search-container.visible {
            display: inline;
        }

        #top-controls .search-container #search-field {
            width: 15em;
        }

        #top-controls .search-container .search-field-clear {
            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 22 22"><circle r="10" cx="10" cy="10" stroke="%23000" stroke-width="1" fill="none" /><path d="M4,6 6,4 10,8 14,4 16,6 12,10 16,14 14,16 10,12 6,16 4,14 8,10z" fill="%23000" /></svg>') right center no-repeat;
            width: 1.25em;
            height: 1.25em;
            display: inline-block;
            vertical-align: middle;
        }

        #top-controls .search-container .search-options {
            display: inline-block;
            vertical-align: middle;
        }

            #top-controls .search-container .search-options .search-option {
                padding-left: .5em;
            }

        #top-controls .search-container #search-field-mission option.solved {
            background-color: #dfd;
        }

        #top-controls .search-container #search-field-mission option.unsolved {
            background-color: #fdd;
        }

        #top-controls .search-container #search-field-mission option.tp {
            background-color: #ddf;
        }

        #top-controls .search-container #search-field-mission-link {
            display: none;
        }

            #top-controls .search-container #search-field-mission-link[href] {
                display: inline;
            }


div.modlink-wrap {
    line-height: 1;
}

body:not(.display-description) div.modlink-wrap {
    margin-top: .3em;
}

div.modlink-wrap a.modlink {
    font-size: 115%;
}

    div.modlink-wrap a.modlink .mod-icon {
        width: 32px;
        height: 32px;
        float: left;
        margin: 0 .5em 0 0;
        image-rendering: pixelated;
    }

body:not(.display-description) div.modlink-wrap a.modlink .mod-icon {
    margin-top: -.3em;
}

div.infos {
    font-size: 85%;
}

td.infos-1 div.infos {
    margin-left: 2.8em;
}

div.infos .inf {
    display: inline;
}

div.infos .inf2::before {
    content: ' • ';
}

div.infos .inf-twitch {
    font-size: 10pt;
}

    div.infos .inf-twitch::before, div.infos .inf-rule-seed::before {
        background-size: 10px 10px;
        background-repeat: no-repeat;
    }

    div.infos .inf-twitch::before {
        background-image: url(HTML/img/twitch.svg);
        background-position: right 4px;
        background-position: calc(100% - 2px) 4px;
        padding-right: 12px;
    }



div.infos .inf-time-mode {
    font-size: 10pt;
}

    div.infos .inf-time-mode::before, div.infos .inf-time-mode::before {
        background-size: 12px 12px;
        background-repeat: no-repeat;
    }

    div.infos .inf-time-mode::before {
        background-position: right 4px;
        background-position: calc(100% - 2px) 3px;
        padding-right: 12px;
    }

    div.infos .inf-time-mode.inf-time-mode-Unassigned::before {
        background-image: url(HTML/img/time-mode-Unassigned.svg);
    }

    div.infos .inf-time-mode.inf-time-mode-Assigned::before {
        background-image: url(HTML/img/time-mode-Assigned.svg);
    }

    div.infos .inf-time-mode.inf-time-mode-Community::before {
        background-image: url(HTML/img/time-mode-Community.svg);
    }

    div.infos .inf-time-mode.inf-time-mode-TwitchPlays::before {
        background-image: url(HTML/img/time-mode-TwitchPlays.svg);
    }

div.infos .inf-rule-seed::before {
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path style="fill:%23026" d="M 778 0 C 720 0 662 21 618 65 C 553 131 536 226 568 307 L 308 567 C 227 534 131 551 66 616 C 10 672 -10 748 4 819 L 172 652 L 312 687 L 313 688 L 348 829 L 181 996 C 252 1010 329 990 384 935 C 449 869 466 773 433 692 L 692 433 C 774 466 871 450 937 384 C 992 328 1012 252 998 181 L 831 348 L 689 313 L 654 172 L 822 4 C 807 1 792 0 778 0 z"/></svg>');
    background-position: right 4px;
    padding-right: 10px;
}

div.infos .inf-author, div.infos .inf-published {
    opacity: .5;
}

    div.infos .inf-author::before {
        content: '\000a by ';
        white-space: pre;
    }
    div.infos .inf-author::after {
        content: '\0020 ';
        white-space: normal;
    }

    div.infos .inf-author span.contributors {
        text-decoration: underline dotted;
        cursor: pointer;
    }

div.infos .inf-published {
    font-size: smaller;
}

div.infos .inf-difficulty .inf-difficulty-sub {
    font-weight: bold;
}

div.infos .inf-id {
    opacity: .5;
    font-family: Consolas, 'DejaVu Sans Mono', monospace;
    display: block;
}

td.infos-1 div.infos > .inf-description {
    display: block;
    font-size: 90%;
    color: #888;
    padding-right: 2em;
}

#main-table .manual-selector {
    position: absolute;
    right: 5px;
    top: 50%;
    transform: translateY(-50%);
    width: 24px;
    height: 30px;
    font-size: 6pt;
    text-decoration: none;
    text-align: center;
    color: hsl(240, 50%, 50%);
    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 30"><path fill="hsl(240, 60%, 70%)" d="M0 10,24 10,12 30z" /></svg>');
}

    #main-table .manual-selector::before {
        content: 'MORE';
    }
/* ... */

